@@ -1,3 +1,7 @@
+2017-06-09  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* device-src/s3-device.h (_S3Device): last_byte_read,
+	  next_block_to_read, next_byte_to_read must be gint64
+
 2017-06-08  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* common-src/ammessage.c (3600096): Print the security_file
 	* common-src/security-file.c (security_file_check_path): Add the
